@@ -4,13 +4,13 @@
  *
  * Copyright (C) 2002-2004 Ollie Rutherfurd <oliver@rutherfurd.net>
  *
- * $Id: Copy_Name_to_Clipboard.bsh,v 1.1 2004/03/20 06:08:49 spestov Exp $
+ * $Id: Copy_Name_to_Clipboard.bsh,v 1.2 2004/04/09 17:10:15 spestov Exp $
  */
 
 void copyBufferNameToClipboard(Buffer buffer)
 {
 	Registers.setRegister('$',buffer.getName());
-	HistoryModel.getModel('clipboard').addItem(buffer.getName());
+	HistoryModel.getModel("clipboard").addItem(buffer.getName());
 }
 
 copyBufferNameToClipboard(buffer);
@@ -25,3 +25,4 @@ copyBufferNameToClipboard(buffer);
 </listitem>
 
 */
+
