@@ -4,13 +4,13 @@
  *
  * Copyright (C) 2002-2004 Ollie Rutherfurd <oliver@rutherfurd.net>
  *
- * $Id: Copy_Path_to_Clipboard.bsh,v 1.1 2004/03/20 06:08:49 spestov Exp $
+ * $Id: Copy_Path_to_Clipboard.bsh,v 1.2 2004/04/09 17:10:15 spestov Exp $
  */
 
 void copyBufferPathToClipboard(Buffer buffer)
 {
 	Registers.setRegister('$',buffer.getPath());
-	HistoryModel.getModel('clipboard').addItem(buffer.getPath());
+	HistoryModel.getModel("clipboard").addItem(buffer.getPath());
 }
 
 copyBufferPathToClipboard(buffer);
